# k8s-api-rust

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  REFACTORING_PLAN.md  TEST_MIGRATION.md
crates/k8s-api/: Cargo.toml
crates/k8s-api-codec/: Cargo.toml  build.rs
crates/k8s-api-codec/src/: lib.rs
crates/k8s-api-conversion/: Cargo.toml
crates/k8s-api-conversion/src/: abac.rs  admission.rs  admissionregistration.rs  apidiscovery.rs  apps.rs  authentication.rs  authorization.rs  autoscaling.rs  batch.rs  certificates.rs  coordination.rs  discovery.rs  events.rs  flowcontrol.rs  lib.rs  networking.rs  node.rs  policy.rs  rbac.rs  resource.rs  scheduling.rs  scheme.rs  storage.rs
crates/k8s-api-conversion/src/core/: mod.rs
crates/k8s-api-conversion/tests/: list_roundtrip.rs
crates/k8s-api-core/: Cargo.toml
crates/k8s-api-core-v1/: Cargo.toml
crates/k8s-api-core-v1/src/: common.rs  container.rs  lib.rs  pod.rs  resource.rs
crates/k8s-api-core/src/: lib.rs  primitives.rs  quantity.rs  traits.rs
crates/k8s-api-core/src/resource/: mod.rs
crates/k8s-api-core/src/runtime/: mod.rs
crates/k8s-api-core/src/schema/: mod.rs
crates/k8s-api-meta/: Cargo.toml
crates/k8s-api-meta/src/: lib.rs
crates/k8s-api-meta/src/v1/: mod.rs  time.rs  types.rs
crates/k8s-api-validation/: Cargo.toml
crates/k8s-api-validation/src/: certificates.rs  common.rs  coordination.rs  internal.rs  lib.rs  node.rs
crates/k8s-api-validation/src/abac/: mod.rs
crates/k8s-api-validation/src/admission/: mod.rs
crates/k8s-api-validation/src/admissionregistration/: mod.rs
crates/k8s-api-validation/src/apidiscovery/: mod.rs
crates/k8s-api-validation/src/apiextensions/: mod.rs
crates/k8s-api-validation/src/apiregistration/: mod.rs
crates/k8s-api-validation/src/apiserverinternal/: mod.rs
crates/k8s-api-validation/src/apps/: mod.rs
crates/k8s-api-validation/src/authentication/: mod.rs
crates/k8s-api-validation/src/authorization/: mod.rs
crates/k8s-api-validation/src/autoscaling/: mod.rs
crates/k8s-api-validation/src/batch/: mod.rs
crates/k8s-api-validation/src/core/: mod.rs
crates/k8s-api-validation/src/discovery/: mod.rs
crates/k8s-api-validation/src/events/: mod.rs
crates/k8s-api-validation/src/extensions/: mod.rs
crates/k8s-api-validation/src/flowcontrol/: mod.rs
crates/k8s-api-validation/src/imagepolicy/: mod.rs
crates/k8s-api-validation/src/networking/: mod.rs
crates/k8s-api-validation/src/policy/: mod.rs
crates/k8s-api-validation/src/rbac/: mod.rs
crates/k8s-api-validation/src/resource/: mod.rs
crates/k8s-api-validation/src/scheduling/: mod.rs
crates/k8s-api-validation/src/storage/: mod.rs
crates/k8s-api-validation/src/storagemigration/: mod.rs
crates/k8s-api/src/: lib.rs
crates/k8s-api/src/abac/: mod.rs
crates/k8s-api/src/abac/internal/: mod.rs  types.rs
crates/k8s-api/src/abac/v0/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/abac/v1beta1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/admission/: mod.rs
crates/k8s-api/src/admission/internal/: mod.rs  types.rs
crates/k8s-api/src/admission/v1/: mod.rs  types.rs
crates/k8s-api/src/admission/v1beta1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/admissionregistration/: mod.rs
crates/k8s-api/src/admissionregistration/internal/: mod.rs  types.rs
crates/k8s-api/src/admissionregistration/v1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/admissionregistration/v1alpha1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/admissionregistration/v1beta1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apidiscovery/: mod.rs
crates/k8s-api/src/apidiscovery/internal/: mod.rs  types.rs
crates/k8s-api/src/apidiscovery/v2/: mod.rs  types.rs
crates/k8s-api/src/apidiscovery/v2beta1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apiextensions/: mod.rs
crates/k8s-api/src/apiextensions/internal/: mod.rs  types.rs
crates/k8s-api/src/apiextensions/v1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apiregistration/: mod.rs
crates/k8s-api/src/apiregistration/internal/: mod.rs  types.rs
crates/k8s-api/src/apiregistration/v1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apiserverinternal/: mod.rs
crates/k8s-api/src/apiserverinternal/internal/: mod.rs  types.rs
crates/k8s-api/src/apiserverinternal/v1alpha1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apps/: mod.rs
crates/k8s-api/src/apps/internal/: mod.rs  types.rs
crates/k8s-api/src/apps/v1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apps/v1beta1/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/apps/v1beta2/: internal_conversion.rs  mod.rs  types.rs
crates/k8s-api/src/authentication/: mod.rs
crates/k8s-api/src/authorization/: mod.rs
crates/k8s-api/src/autoscaling/: mod.rs
crates/k8s-api/src/batch/: mod.rs
crates/k8s-api/src/certificates/: mod.rs
crates/k8s-api/src/coordination/: mod.rs
crates/k8s-api/src/core/: mod.rs
crates/k8s-api/src/discovery/: mod.rs
crates/k8s-api/src/events/: mod.rs
crates/k8s-api/src/extensions/: mod.rs
crates/k8s-api/src/flowcontrol/: mod.rs
crates/k8s-api/src/imagepolicy/: mod.rs
crates/k8s-api/src/networking/: mod.rs
crates/k8s-api/src/node/: mod.rs
crates/k8s-api/src/policy/: mod.rs
crates/k8s-api/src/rbac/: mod.rs
crates/k8s-api/src/resource/: mod.rs
crates/k8s-api/src/scheduling/: mod.rs
crates/k8s-api/src/storage/: mod.rs
crates/k8s-api/src/storagemigration/: mod.rs
crates/k8s-api/tests/: serialization.rs
crates/k8s-apiextensions-apiserver/: Cargo.toml
crates/k8s-apiextensions-apiserver/src/: lib.rs
crates/k8s-apiextensions-apiserver/src/apis/: mod.rs
crates/k8s-apimachinery/: Cargo.toml
crates/k8s-apimachinery/src/: lib.rs
crates/k8s-apimachinery/src/apis/: mod.rs
crates/k8s-apimachinery/src/types/: mod.rs
crates/k8s-kube-aggregator/: Cargo.toml
crates/k8s-kube-aggregator/src/: lib.rs
crates/k8s-kube-aggregator/src/apis/: mod.rs
(+200 files in other folders)
