[workspace]
resolver = "2"
members = [
    "crates/k8s-api-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chenwenxiaolive/k8s-api-rust"
authors = ["chenwenxiaolive"]
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"
