[workspace]
resolver = "2"
members = [
    "crates/k8s-api-core",
    "crates/k8s-apimachinery",
    "crates/k8s-api",
    "crates/k8s-api-validation",
    "crates/k8s-api-conversion",
    "crates/k8s-apiextensions-apiserver",
    "crates/k8s-kube-aggregator",
    "crates/k8s-api-codec",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/k8s-api-rust"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Protobuf (optional)
prost = "0.13"
prost-build = "0.13"
prost-reflect = "0.13"
prost-types = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# URL parsing
url = { version = "2.5", features = ["serde"] }

# Regex for validation
regex = "1.11"
once_cell = "1.20"

# Internal crates
k8s-api-core = { path = "crates/k8s-api-core" }
k8s-apimachinery = { path = "crates/k8s-apimachinery" }
k8s-api = { path = "crates/k8s-api" }
k8s-api-validation = { path = "crates/k8s-api-validation" }
k8s-api-conversion = { path = "crates/k8s-api-conversion" }
k8s-apiextensions-apiserver = { path = "crates/k8s-apiextensions-apiserver" }
k8s-kube-aggregator = { path = "crates/k8s-kube-aggregator" }
