[package]
name = "k8s-api-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
k8s-api-core = { workspace = true }
once_cell = { workspace = true }
prost-reflect = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
glob = "0.3"
prost-build = { workspace = true }

[dev-dependencies]
k8s-api = { workspace = true }
k8s-apimachinery = { workspace = true }
