[package]
name = "k8s-api-conversion"
description = "Version conversion logic for Kubernetes API types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
k8s-api = { workspace = true }
k8s-api-core = { workspace = true }
k8s-apimachinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
