[package]
name = "k8s-api-core-v1"
description = "Kubernetes core/v1 API types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
k8s-api-core = { path = "../k8s-api-core" }
k8s-api-meta = { path = "../k8s-api-meta" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
