[package]
name = "k8s-api-meta"
description = "Kubernetes apimachinery types (TypeMeta, ObjectMeta, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
k8s-api-core = { path = "../k8s-api-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
