[package]
name = "k8s-api-validation"
description = "Validation logic for Kubernetes API types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-api = { workspace = true }
k8s-apimachinery = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
