[package]
name = "k8s-api"
description = "Kubernetes API types for all API groups"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-api-core = { workspace = true }
k8s-apimachinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[features]
default = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy"]
core = []
apps = []
autoscaling = []
batch = []
networking = []
policy = []
rbac = []
storage = []
# Add more API groups as features
all = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy"]
