[package]
name = "k8s-api"
description = "Kubernetes API types for all API groups"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-api-core = { workspace = true }
k8s-apimachinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[features]
default = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy", "coordination", "discovery", "certificates", "scheduling", "admissionregistration", "events", "flowcontrol", "node", "apiextensions", "authentication", "authorization"]
core = []
admissionregistration = []
apiextensions = []
apps = []
authentication = []
authorization = []
autoscaling = []
batch = []
certificates = []
coordination = []
discovery = []
events = []
flowcontrol = []
networking = []
node = []
policy = []
rbac = []
scheduling = []
storage = []
# Add more API groups as features
all = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy", "coordination", "discovery", "certificates", "scheduling", "admissionregistration", "events", "flowcontrol", "node", "apiextensions", "authentication", "authorization"]
