[package]
name = "k8s-api"
description = "Kubernetes API types for all API groups"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8s-api-core = { workspace = true }
k8s-apimachinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[features]
default = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy", "coordination", "discovery", "certificates", "scheduling", "admissionregistration", "events", "flowcontrol", "node", "apiextensions", "authentication", "authorization", "apiregistration", "resource", "storagemigration", "admission", "apidiscovery", "apiserverinternal", "abac", "extensions", "imagepolicy"]
abac = []
core = []
admission = []
admissionregistration = []
apidiscovery = []
apiextensions = []
apiregistration = []
apiserverinternal = []
apps = []
authentication = []
authorization = []
autoscaling = []
batch = []
certificates = []
coordination = []
discovery = []
events = []
extensions = []
flowcontrol = []
imagepolicy = []
networking = []
node = []
policy = []
rbac = []
resource = []
scheduling = []
storage = []
storagemigration = []
# Add more API groups as features
all = ["core", "apps", "batch", "networking", "rbac", "storage", "autoscaling", "policy", "coordination", "discovery", "certificates", "scheduling", "admissionregistration", "events", "flowcontrol", "node", "apiextensions", "authentication", "authorization", "apiregistration", "resource", "storagemigration", "admission", "apidiscovery", "apiserverinternal", "abac", "extensions", "imagepolicy"]
